# Assembly

./: CMakeLists.txt  vcpkg.json
asm/unix/: math.asm  palindrome.asm  sorting.asm
asm/windows/: palindrome.asm
bench/: bench_sorting.cpp
include/: math.h  my_math.h  palindrome.h  sorting.h
src/: math.cpp  my_math.cpp  palindrome.cpp  sorting.cpp
test/: test_math.cpp  test_palindrome.cpp  test_sorting.cpp
